--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-db_host=db_host
-db_name=db_name
-db_port=db_port
-db_username=db_username
-db_password=db_password
+DB_HOST=DBHOST
+DB_NAME=DBNAME
+DB_PORT=DBPORT
+DB_USERNAME=DBUSERNAME
+DB_PASSWORD=DBPASSWORD
+OPENAI_API_KEY=OPENAPIKEY
