--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ python-dotenv==1.0.1
 psycopg2-binary==2.9.9
 numpy==1.26.3 
 pgvector==0.2.4
-langchain-community==0.0.1
+langchain-community==0.0.16
 langchain==0.1.4
 tiktoken==0.5.2
 langchain-openai==0.0.5
+black==24.1.1
+isort==5.13.2
